--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
         "type": "shell",
         "label": "C/C++: g++ build active file",
         "command": "/usr/bin/g++",
-        "args": ["-g", "${fileDirname}/*.cpp", "-o", "${fileDirname}/${fileBasenameNoExtension}"],
+        "args": ["-g", "${fileDirname}/${fileBasename}", "-o", "${fileDirname}/${fileBasenameNoExtension}"],
         "options": {
           "cwd": "/usr/bin"
         },
